manifests/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-statefulset
  labels:
    app: yolo-ecommerce
    component: database
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo-service"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo # required by the selector
        component: database 
    spec:
      containers:
      - name: mongo
        image: mongo:noble
        ports:
        - containerPort: 27017
          name: mongo
        volumeMounts:
        - name: mongo-persistent-storage
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
