manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: yolo-ecommerce
    component: frontend
spec:
  type: ClusterIP
  selector:
    app: oscar-yolo-client
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
